[tool.poetry]
name = "sus2ymst"
version = "0.1.0"
description = ""
authors = ["k0tayan <kotayan0415@outlook.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.101.1"
sus-io = "^0.2.1"
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
